[workspace]

members = [
    "abc002",
    "abc023",
    "abc077",
    "abc095",
    "abc128",
    "abc139",
    "abc145",
    "abc150",
    "abc163",
    "abc164",
    "abc169", 
    "abc318",
    "abc319",
    "abc320",
    "abc321",
    "abc322",
    "abc323",
    "abc324",
    "abc325",
    "abc326",
    "abc327",
    "abc328",
    "abc329",
    "abc330",
    "ahc023",
    "ahc024",
    "ahc025",
    "ahc026",
    "arc054",
    "arc165",
    "arc166",
    "arc167",
    "arc168",
    "joi2007ho",
    "joi2008ho",
    "joi2008yo",
    "joi2009ho", 
    "s8pc-4",
    "s8pc-6",
    "sumitrust2019",
]
